﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2020-04-18
	Fixed: Processing counter shift. For the final time? Who knows. Suspected multi-threading issue.
### 2020-04-16
	Fixed: NullRef when disasbling process debug when foreground monitor is disabled.
### 2020-04-05
	Fixed: ArgumentOutOfRange bug. Hopefully for good.
	Fixed: Process priority was being attempted to be set even when it was set to be ignored.
	Added: Legacy app detection utilizes uniprocessor flag in executables.
	Fixed: I/O Priority warning was output even when it was not actually relevant due to insufficient checks.
	Fixed: Several components could not be disabled correctly.
	Fixed: Paging option was incorrectly using deprecated setting.
### 2020-04-03
	Added: Display more info about legacy, 32bit, and non-LAA app traits.
	Fixed: Culture variations should no longer cause saving/loading configuration to break (e.g. decimal pointer differences).
	Fixed: Exception during initialization when certain components are disabled.
	Changed: Disable a lot of optional components by default on initial launch.
	Fixed: Crash on exit if power manager is disabled.
	Fixed: Crash if loopback is not the first found network interface.
	Changed: Disabled power management configuration option when the component is disabled.
### 2020-03-07
	Changed: Exclusive mode is now disabled unless you're running Windows 7. This interacts poorly with Windows 10 Game Mode and needs farther investigation.
### 2020-03-01
	Fixed: Parent finding was declaring self as parent. Now correctly reports actual parent process if found.
### 2020-02-26
	Fixed: ArgumentOutOfRange exception in LogListRetrieveItem. Hopefully.
### 2020-02-24
	Changed: Crashes are now more descriptive if the error occurs deeper in the code.
### 2020-01-18
	Fixed: Invocation problems that were introduced due to recent changes.
### 2020-01-??