@@ -3,6 +3,9 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-04-21
+	Changed: System protection improved by increasing the number of process names.
+	Changed: Protection level 2 now denies all changes, not just affinity&priority.
 ### 2020-04-18
 	Fixed: Processing counter shift. For the final time? Who knows. Suspected multi-threading issue.
 ### 2020-04-16
